--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -343,11 +343,11 @@ pre code{
 		-moz-transition: background-color 0.3s;
 		transition: background-color 0.3s;
 		/* Force Hardware Acceleration in WebKit */
-		-webkit-transform: translate3d(0, 0, 0);
+		/* -webkit-transform: translate3d(0, 0, 0); */
 		-moz-transform: translate3d(0, 0, 0);
 		-ms-transform: translate3d(0, 0, 0);
 		-o-transform: translate3d(0, 0, 0);
-		transform: translate3d(0, 0, 0);
+		/* transform: translate3d(0, 0, 0); */
 		-webkit-backface-visibility: hidden;
 		backface-visibility: hidden;
 		&.is-fixed {
@@ -356,9 +356,9 @@ pre code{
 			top: -61px;
 			background-color: fade(white, 90%);
 			border-bottom: 1px solid darken(white, 5%);
-			-webkit-transition: -webkit-transform 0.3s;
+			/* -webkit-transition: -webkit-transform 0.3s; */
 			-moz-transition: -moz-transform 0.3s;
-			transition: transform 0.3s;
+			/* transition: transform 0.3s; */
 			.navbar-brand {
 				color: @gray-dark;
 				&:hover,
@@ -380,11 +380,11 @@ pre code{
 		}
 		&.is-visible {
 			/* if the user changes the scrolling direction, we show the header */
-			-webkit-transform: translate3d(0, 100%, 0);
+			/* -webkit-transform: translate3d(0, 100%, 0); */
 			-moz-transform: translate3d(0, 100%, 0);
 			-ms-transform: translate3d(0, 100%, 0);
 			-o-transform: translate3d(0, 100%, 0);
-			transform: translate3d(0, 100%, 0);
+			/* transform: translate3d(0, 100%, 0); */
 		}
 	}
 }
