--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -147,7 +147,11 @@
 
 <!--fastClick.js -->
 <script>
-    async("http://cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js", function(){
+    // async("http://cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js", function(){
+    //     var $nav = document.querySelector("nav");
+    //     if($nav) FastClick.attach($nav);
+    // })
+    async('{{ "/js/fastclick.min.js" | prepend: site.baseurl }}', function(){
         var $nav = document.querySelector("nav");
         if($nav) FastClick.attach($nav);
     })
